--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-My entry to the js1k contest. http://js1k.com/2010-first/
+My entries to the js1k contest. http://js1k.com
 
 This is really bad code, tailored for the constraints that we had.
